[修复] 完善Cypher Workbench链路并修复投影与桥接稳定性